Updated a few details

--- a/5. Starship2D/5. Starship2D/5. Starship2D.vcxproj
+++ b/5. Starship2D/5. Starship2D/5. Starship2D.vcxproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <ClInclude Include="Background.h" />
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="DataProvider.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
