--- a/5. Starship2D/5. Starship2D/5. Starship2D.vcxproj.filters
+++ b/5. Starship2D/5. Starship2D/5. Starship2D.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClInclude Include="Background.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DataProvider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="ship1.png">
