--- a/5. Starship2D/5. Starship2D/5. Starship2D.vcxproj
+++ b/5. Starship2D/5. Starship2D/5. Starship2D.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="HealthBar.cpp" />
@@ -138,6 +139,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="DataProvider.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="HealthBar.h" />
